k8s/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cxyz-security
  labels:
    app.kubernetes.io/part-of: companyxyz-ng
